crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_list_view_after_zz_recenter.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 12)"
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│   Acct06 (u06)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct07 (u07)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct08 (u08)                        914 994  ██████░░░░   18s  ↪   255 062 │
│ ▶ Acct09 (u09)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct10 (u10)                        914 994  ██████░░░░   18s  ↪   255 062 │
│   Acct11 (u11)                        914 994  ██████░░░░   18s  ↪   255 062 │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
